fixed dark mode icon not switching to light mode icon when dark mode was toggled for dekstop versions

--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,9 @@
 .dark-mode {
   background-color: #1D1D1D;
 }
+.dark-mode nav img {
+  content: url("../assets/light-mode.png");
+}
 .dark-mode .statistics-card {
   background-color: #343434 !important;
 }
